<resources>
    <string name="app_name">Wutsapper-WhatsApp&amp;WB Transfer</string>

    <!--App string-->
    <string name="text_toolbar_home">Wutsapper</string>
    <string name="choose_transfer_app">Choose transfer App:</string>
    <string name="android_to_iphone">Android to iPhone</string>
    <string name="iphone_to_android">iPhone to Android</string>
    <string name="id_whatsapp">WhatsApp</string>
    <string name="id_wa_business">WA Business</string>
    <string name="text_reBackup">Re-backup</string>
    <string name="text_yes">Yes</string>
    <string name="text_low_Battery">To ensure successful data transfer, please keep your phone&amp;s battery level above 50%.</string>
    <string name="text_ok">Ok</string>
    <string name="text_toolbar_guide_backup">Backup WhatsApp</string>
    <string name="backup">Backup</string>
    <string name="text_guide_backup">Please follow the below steps to backup your WhatsApp data.</string>
    <string name="text_backup_step1">Please enter your mobile phone number used for WhatsApp backup</string>
    <string name="defaut_coutryPhone">United States(USA)</string>
    <string name="defaut_coutryCode">+1</string>
    <string name="confirm_number">Confirm that the phone number can receive the verification code.</string>
    <string name="hint_enterPhone">Phone number</string>
    <string name="unselect_All">Unselect All</string>
    <string name="select_All">Select All</string>
    <string name="other_Database">Other Database</string>
    <string name="contracts">CONTACTS</string>
    <string name="txt_new">NEW</string>
    <string name="whatsApp_Contacts">WhatsApp Contacts</string>
    <string name="note">Notes:</string>
    <string name="txt_note">The developer of Wutsapper does not save any of your data, and all backed-up WhatsApp data is only used in WhatsApp transfer.</string>
    <string name="tranfer_options">Two options to complete WhatsApp transfer:</string>
    <string name="phoneToPhone">Phone to Phone</string>
    <string name="guide_phoneToPhone">Use USB-C to Lightning cable to transfer WhatsApp with one </string>
    <string name="no_usbC">No USB-C</string>
    <string name="guide_noUsbC">Complete WhatsApp transfer with the desktop toolkit.</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="search">Search</string>
    <string name="country_code">Choose country/region</string>
    <string name="stateprogress_connect">Connect</string>
    <string name="stateprogress_transfer">Transfer</string>
    <string name="stateprogress_WA_login">WA login</string>
    <string name="stateprogress_subscribe">Subscribe</string>
    <string name="invalid_country_code">invalid country code</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="premium">Premium</string>
    <string name="premium1">Transfer all WhatsApp data</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="FAQs">FAQs</string>
    <string name="Feedback">Feedback</string>
    <string name="Language">Language</string>
    <string name="About">About</string>
    <string name="toolkit">WhatsApp Toolkit</string>
    <string name="txt_buyPremium">If you already purchased Wutsapper on the official website, please "Sign in" directly; if you have not bought Wutsapper, please click "Buy Now" first.</string>
    <string name="buyNow">Buy Now</string>
    <string name="signIn">Sign in</string>
    <string name="yearly">Yearly</string>
    <string name="wa_wab">WhatApp+ WA Business</string>
    <string name="status_saver">Status Saver</string>
    <string name="deleted_recover">WhatsApp Deleted recover</string>
    <string name="whatsapp_deleted">WhatsApp Deleted</string>
    <string name="wa_web">WhatsApp Web</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="all">All</string>
    <string name="text">Text</string>
    <string name="audios">Audios</string>
    <string name="files">Files</string>
    <string name="emoji">Emoji</string>
    <string name="locations">Locations</string>
    <string name="gifs">Gifs</string>
    <string name="voices">Voices</string>
    <string name="statusSaver_txt1">How to save image status?</string>
    <string name="statusSaver_step1">Open WhatsApp status</string>
    <string name="statusSaver_step2">View status from WhatsApp</string>
    <string name="statusSaver_step3">Open Wutsapper to download</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="Let_go">Let’s go</string>
    <string name="start">Start</string>
    <string name="deleted_wa_txt">Wutsapper help you recover the WhatsApp messages which are deleted by sender side, from now on you won’t miss any important messages.</string>
    <string name="wa_web_txt">WhatsApp Web helps you log in to multiple WA accounts on the same device or the same account on multiple devices.</string>
    <string name="device_connection">Device connection</string>
    <string name="device_connection_text">Two options to complete WhatsApp transfer:</string>
    <string name="share_file">Share file</string>
    <string name="share_file_text">Select the form to share files</string>
    <string name="receive_file_bluetooth">Receive file with bluetooth</string>
    <string name="receive_file_bluetooth_txt1">If it’s the first time connect please confirm the code to procced to send and receive files.</string>
    <string name="receive_file_bluetooth_txt2">Tap the device name to connect</string>
    <string name="waiting_sender_txt1">Waiting for Sender...</string>
    <string name="waiting_sender_txt2">Connect to: Unknowssid</string>
    <string name="selected_files_txt1">Selected files</string>
    <string name="selected_files_txt2">Remove all</string>
    <string name="wa_data">WhasApp Data</string>
    <string name="spinner_step2_txt1">Last 3 years</string>
    <string name="spinner_step2_txt2">Last 1 year</string>
    <string name="spinner_step2_txt3">Last 3 months</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>