<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.wondershare.wutsapper.transfer.feature.backup.BackupViewmodel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal">

<!-- view all

                <androidx.cardview.widget.CardView
                    android:id="@+id/spinner_select"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:outlineSpotShadowColor="@color/trans"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/color_269FD126">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_18sdp"
                            android:background="@color/trans"
                            android:text="All"
                            android:textStyle="bold"
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@color/black"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="@dimen/_9sdp"
                            android:layout_height="@dimen/_9sdp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/_18sdp"
                            android:background="@color/trans"
                            android:src="@drawable/ic_dropdown_menu_home" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/unselectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:text="@string/unselect_All"
                    android:textColor="@color/color_267DFF"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_step2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1" />

            <TextView
                style="@style/txtStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/other_Database"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:outlineSpotShadowColor="@color/trans"
                app:cardCornerRadius="@dimen/_18sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_269FD126">

                    <ImageView
                        android:layout_width="@dimen/_34sdp"
                        android:layout_height="@dimen/_34sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/ic_contact_24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/txtStyle2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contracts" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_6sdp"
                                android:outlineSpotShadowColor="@color/trans"
                                app:cardCornerRadius="@dimen/_12sdp">

                                <TextView
                                    style="@style/txtStyle6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/background_color_new"
                                    android:paddingStart="@dimen/_8sdp"
                                    android:paddingTop="@dimen/_3sdp"
                                    android:paddingEnd="@dimen/_8sdp"
                                    android:paddingBottom="@dimen/_3sdp"
                                    android:text="@string/txt_new" />
                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/whatsApp_Contacts"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_contacts"
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/backgound_checkbox"
                        android:button="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/txt_note"
                android:textSize="@dimen/_10sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/color_2156DF"
                app:cardCornerRadius="@dimen/_60sdp"
                tools:ignore="MissingConstraints">

                <TextView
                    style="@style/styleButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/backup" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </FrameLayout>


</layout>