<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_38sdp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_34sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_34sdp"
                android:text="@string/txt_buyPremium"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10sdp"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_rebackup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_40B6BACB"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/_44sdp">

                    <TextView
                        style="@style/styleButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/buyNow"
                        android:textAlignment="center" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnBackup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_2156DF"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/_44sdp">

                    <TextView
                        style="@style/styleButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signIn"
                        android:textAlignment="center" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
