<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:progress="100"
        android:progressTint="#F1F4FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_step4"
        app:layout_constraintStart_toStartOf="@+id/img_step1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_step1"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_stateprogressbar"
        app:layout_constraintEnd_toStartOf="@+id/img_step2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_step2"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_step3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/img_step1"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_stateprogressbar" />

    <ImageView
        android:id="@+id/img_step3"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_step4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/img_step2"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_stateprogressbar"/>

    <ImageView
        android:id="@+id/img_step4"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/img_step3"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_stateprogressbar" />

    <TextView
        android:id="@+id/tv_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stateprogress_connect"
        app:layout_constraintEnd_toEndOf="@+id/img_step1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/img_step1"
        app:layout_constraintTop_toBottomOf="@+id/img_step1"
        android:textColor="@color/color_9199B0"/>

    <TextView
        android:id="@+id/tv_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stateprogress_transfer"
        app:layout_constraintEnd_toEndOf="@+id/img_step2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/img_step2"
        app:layout_constraintTop_toBottomOf="@+id/img_step2" />

    <TextView
        android:id="@+id/tv_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stateprogress_WA_login"
        app:layout_constraintEnd_toEndOf="@+id/img_step3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/img_step3"
        app:layout_constraintTop_toBottomOf="@+id/img_step3" />

    <TextView
        android:id="@+id/tv_step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stateprogress_restore"
        app:layout_constraintEnd_toEndOf="@+id/img_step4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/img_step4"
        app:layout_constraintTop_toBottomOf="@+id/img_step4" />
</androidx.constraintlayout.widget.ConstraintLayout>